# amien-scrapers

./: 2_Stages_Clustering_Updated.ipynb  Amazon_Rapidapi_Scraper.ipynb  Animal_Images_Classification.ipynb  Api_Testing.ipynb  Apify_Collections.ipynb  Apify_Facebook.ipynb  Apollo_io_Api_Scraper.ipynb  Assembly_AI.ipynb  BSAOnline_Scraper.ipynb  Bestbuy.ipynb  Bisnisdotcom_News_Scraper.ipynb  Bluebook_Scraper.ipynb  Booking_com_August_2025.ipynb  Booking_com_Scraper.ipynb  Business_Classifier_with_Bart.ipynb  Capsolver_Testing.ipynb  Capterra_Scraper.ipynb  Cat-Prefexies-Fetcher.ipynb  CendEf_Scraper.ipynb  Clearbit_Enrichment.ipynb  Cnn_Stock_Scraper.ipynb  Colab_Ocrmypdf.ipynb  Covid19_Sentiment_Analysis_Tweets.ipynb  Crexi_Scraper.ipynb  Crunchbase_Api.ipynb  Crunchbase_Rapidapi.ipynb  Csv_formatter.ipynb  Demo_Web_Scraping_Kompas_Com.ipynb  Detikcom_News_Scraper.ipynb  EU_Tenders_Scraper.ipynb  Ebay_Api_Scraper.ipynb  Ekstrak_Soal_Pilihan_Ganda_PPG_Modul_2.ipynb  Eurosender_com_Scraper.ipynb  Events_Scraper.ipynb  Expedia_com_Scraper.ipynb  Facebook_Rapidapi.ipynb  Facebook_Scraper.ipynb  Feel22_Scraper.ipynb  Ferry_Schedule_Scraper.ipynb  FinalDrives_Parts.ipynb  (+167 more)
captcha/: captcha_handler.py  core.py
google-maps-scraper/: __main__.py  collector.py  exception.py  models.py  scraper.py
leads/: aged-care.json  leads2.json  leads3.json  leads4.json
playwright/: tutorial.sh
receipt-nlp/: ingridient-parser.py  pyproject.toml  setup.py
receipt-nlp/config/: constants.py  database.py  settings.py
receipt-nlp/pipeline/: pipeline_runner.py  pipeline_steps.py  task_queue.py
